# TAIproject

./: Astar_snake.py  README.md  Results_of_try10_weights_82_1_1600.h5_over_10000_runs.txt  Results_of_try11_weights_67_1_end.h5_over_10000_runs.txt  agent.py  genetic_snake.py  main.py  plotter.py  pyproject.toml  snakeTrainer.py
Snake/: README.md  agent.py  dna.py  gameModule.py  genetic_snake.py  main.py  plotter.py  pyproject.toml  snakeTrainer.py  train_rl.py
Snake/try1/: weights17.h5  weights22.h5  weights27_1.h5  weights_31_2.h5  weights_41_4.h5
Snake/try10/: weights_1_0.h5  weights_20_0.h5  weights_34_0_1000.h5  weights_34_0_1200.h5  weights_34_0_1400.h5  weights_34_0_1800.h5  weights_37_1.h5  weights_3_0_200.h5  weights_46_1.h5  weights_50_1.h5  weights_6_0_400.h5  weights_82_1.h5  weights_82_1_1000.h5  weights_82_1_1200.h5  weights_82_1_1400.h5  weights_82_1_1600.h5  weights_82_1_200.h5  weights_82_1_600.h5
Snake/try11/: weights_0_0_0.h5  weights_11_0.h5  weights_13_0.h5  weights_15_0.h5  weights_20_0.h5  weights_21_0.h5  weights_24_0.h5  weights_24_0_end.h5  weights_24_1_0.h5  weights_2_0.h5  weights_30_1.h5  weights_33_1.h5  weights_34_1.h5  weights_37_1.h5  weights_4_0.h5  weights_4_0_200.h5  weights_54_1.h5  weights_55_1_400.h5  weights_61_1.h5  weights_61_1_600.h5  weights_67_1.h5  weights_67_1_1400.h5  weights_67_1_1800.h5  weights_67_1_end.h5
Snake/try12/: weights_11_0.h5  weights_11_0_2800.h5  weights_11_1_0.h5  weights_2_0.h5  weights_2_0_400.h5  weights_3_0.h5  weights_4_0.h5  weights_4_0_800.h5  weights_5_0_1400.h5  weights_5_0_1600.h5  (+1 more)
(+219 files in other folders)
